The navigation graph and the splash fragment have been created, a custom font has been added to the app, and basic extension functions for views have been implemented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Cabify Store</string>
+    <string name="splash.logo">The app logo</string>
+    <string name="splash.bottom">Image that varies depending on the type of splash screen shown</string>
+    <string name="splash.store">Discover the official Cabify store</string>
+    <string name="splash.discounts">Enjoy personalized discounts</string>
+    <string name="splash.shipping">Fast and secure shipping methods</string>
 </resources>
