Created the cart's product list and added the logic behind the product discounts.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,11 @@
     <string name="store.taking">Are you taking it?</string>
     <string name="store.add">Add to Cart</string>
     <string name="cart.title">Shopping Cart</string>
-    <string name="cart.empty">Your cart is empty</string>
+    <string name="cart.empty">Your cart is empty!</string>
     <string name="cart.process">Process the order</string>
+    <string name="cart.quantity">Quantity:</string>
+    <string name="cart.subtotal">Subtotal</string>
+    <string name="cart.discounts">Discounts</string>
+    <string name="cart.total">Total Price</string>
+
 </resources>
